# anvil

./: .gitignore  AGENTS.md  Cargo.toml  README.md  anvil.env  anvil.toml  forge.env  install.sh
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml  release.yml
contrib/homebrew/: anvil.rb
crates/anvil-cli/: Cargo.toml
crates/anvil-cli/src/: audit.rs  benchmark.rs  jsonrpc.rs  main.rs  mcp.rs
crates/anvil-cli/tests/: context_cli_tests.rs  jsonrpc_test.rs  mcp_test.rs
crates/anvil-core/: Cargo.toml
crates/anvil-core/src/: bundle.rs  cache.rs  environment.rs  event_bus.rs  gpg.rs  installer.rs  lib.rs  manifest.rs  packages.rs  policy.rs  registry.rs  resolver.rs  snapshot.rs  state.rs  types.rs
crates/anvil-core/tests/: integration.rs
crates/anvil-drivers/: Cargo.toml
crates/anvil-sdk/: Cargo.toml
crates/anvil-sdk/src/: lib.rs
crates/anvil-shim/: Cargo.toml
crates/anvil-shim/src/: main.rs
crates/anvil-tui/: Cargo.toml
crates/anvil-tui/src/: lib.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: audit.rs  benchmark.rs  jsonrpc.rs  main.rs  mcp.rs
crates/forge-cli/tests/: context_cli_tests.rs  jsonrpc_test.rs  mcp_test.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: bundle.rs  cache.rs  environment.rs  event_bus.rs  gpg.rs  installer.rs  launcher.rs  lib.rs  lock.rs  manifest.rs  packages.rs  policy.rs  registry.rs  resolver.rs  snapshot.rs  state.rs  types.rs
crates/forge-core/src/api/: v1.rs
crates/forge-core/src/context/: mod.rs
crates/forge-core/src/diagnostics/: mod.rs
crates/forge-core/src/operations/: mod.rs
crates/forge-core/src/plugin/: mod.rs  registry.rs
crates/forge-core/src/secrets/: mod.rs
crates/forge-core/tests/: integration.rs
crates/forge-drivers/: Cargo.toml
crates/forge-drivers/src/: lib.rs
crates/forge-sdk/: Cargo.toml
crates/forge-sdk/src/: lib.rs
crates/forge-shim/: Cargo.toml
crates/forge-shim/src/: main.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: lib.rs
docs/: core-1.0-freeze.md  ecosystem.md  guide.md  overview.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md
docs/specs/: fcp-spec.md
extensions/neovim/: README.md
extensions/vscode/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode/src/: anvilPanel.ts  commands.ts  extension.ts  forgePanel.ts  mcpClient.ts  statusBar.ts  types.ts
openspec/: config.yaml
openspec/changes/forge-benchmark/: design.md  proposal.md  tasks.md
openspec/changes/forge-bundle/: design.md  proposal.md  tasks.md
openspec/changes/forge-explain-everything/: design.md  proposal.md  tasks.md
openspec/changes/forge-packages/: design.md  proposal.md  tasks.md
openspec/changes/forge-policy-engine/: design.md  proposal.md  tasks.md
openspec/changes/forge-snapshot/: design.md  proposal.md  tasks.md
openspec/specs/acp-spec/: spec.md
sdks/go/: client.go  client_test.go  go.mod  types.go
sdks/python/: pyproject.toml
sdks/python/anvil_sdk/: __init__.py  client.py  types.py
sdks/python/forge_sdk/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
(+218 files in other folders)
