[package]
name = "anvil-sdk"
version = "0.1.0"
edition = "2021"
description = "Anvil Rust SDK — typed wrapper around the Anvil engine"

[dependencies]
anvil-core = { path = "../anvil-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

[features]
default = []
async = []
