[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"
description = "Forge CLI — command-line interface for reproducible development environments"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
forge-core = { path = "../forge-core" }
forge-drivers = { path = "../forge-drivers" }
dirs = "5.0"
