[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"
description = "Forge core engine — runtime resolution, lifecycle, operations, context, diagnostics, secrets, and public API"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1.7"
semver = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
futures-util = "0.3"
serde_json = "1.0"
keyring = "2.1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
regex = "1"

