[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anvil-sdk"
version = "0.1.0"
description = "Anvil Python SDK — control Anvil environments from Python"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
include = ["anvil_sdk*"]
